force-app/main/default/objects/HAM_Event_Session__c/HAM_Event_Session__c.object-meta.xml
<CustomObject>
    <label>Event Session</label>
    <nameField>
        <label>Event Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>