force-app/main/default/objects/HAM_Event_Session__c/fields/CventEvents_Event__c.field-meta.xml
<CustomField>
    <fullName>CventEvents_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this session to its parent Cvent event record.</description>
    <inlineHelpText>The Cvent event this session belongs to.</inlineHelpText>
    <label>Cvent Event</label>
    <referenceTo>CventEvents__Event__c</referenceTo>
    <relationshipLabel>Event Sessions</relationshipLabel>
    <relationshipName>Event_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>