force-app/main/default/objects/HAM_Event_Session__c/fields/HAM_BT_Session__c.field-meta.xml
<CustomField>
    <fullName>HAM_BT_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the originating Blackthorn session record. Provides a navigable back-link for validation and cross-reference.</description>
    <inlineHelpText>Click to navigate to the original Blackthorn session record. Null indicates this record was not migrated from Blackthorn.</inlineHelpText>
    <label>BT Session</label>
    <referenceTo>conference360__Session__c</referenceTo>
    <relationshipLabel>Event Sessions</relationshipLabel>
    <relationshipName>Event_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>