force-app/main/default/objects/HAM_Event_Session__c/fields/HAM_BT_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>HAM_BT_Source_Id__c</fullName>
    <description>The Salesforce Record ID of the originating Blackthorn session record. Used as the External ID upsert key during migration.</description>
    <externalId>true</externalId>
    <inlineHelpText>The 18-character ID of the source Blackthorn session. Do not edit manually — managed by the migration process.</inlineHelpText>
    <label>BT Source Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>