force-app/main/default/objects/HAM_Event_Session__c/fields/HAM_Capacity__c.field-meta.xml
<CustomField>
    <fullName>HAM_Capacity__c</fullName>
    <description>Maximum number of registrants allowed for this session.</description>
    <inlineHelpText>Session capacity carried over from Blackthorn. 0 may indicates unlimited.</inlineHelpText>
    <label>Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>