force-app/main/default/objects/HAM_Event_Session__c/fields/HAM_End_Date__c.field-meta.xml
<CustomField>
    <fullName>HAM_End_Date__c</fullName>
    <description>The end date of this session.</description>
    <inlineHelpText>Date this session ends.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>