force-app/main/default/objects/HAM_Event_Session__c/fields/HAM_End_Time__c.field-meta.xml
<CustomField>
    <fullName>HAM_End_Time__c</fullName>
    <description>The end time of this session.</description>
    <inlineHelpText>Time this session ends.</inlineHelpText>
    <label>End Time</label>
    <type>Time</type>
</CustomField>