force-app/main/default/objects/HAM_Event_Session__c/fields/HAM_Location__c.field-meta.xml
<CustomField>
    <fullName>HAM_Location__c</fullName>
    <description>Room or location name for this session carried over from Blackthorn.</description>
    <inlineHelpText>Where this session takes place.</inlineHelpText>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>