force-app/main/default/objects/HAM_Event_Session__c/fields/HAM_Session_Category__c.field-meta.xml
<CustomField>
    <fullName>HAM_Session_Category__c</fullName>
    <description>Category of this session carried over from the Blackthorn source record.</description>
    <inlineHelpText>The session category as it appeared in Blackthorn.</inlineHelpText>
    <label>Session Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Placeholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>