force-app/main/default/objects/HAM_Event_Session__c/fields/HAM_Session_Name__c.field-meta.xml
<CustomField>
    <fullName>HAM_Session_Name__c</fullName>
    <description>The name of the session carried over from the Blackthorn source record.</description>
    <inlineHelpText>The session title as it appeared in Blackthorn.</inlineHelpText>
    <label>Session Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>