force-app/main/default/objects/HAM_Event_Session__c/fields/HAM_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>HAM_Start_Date__c</fullName>
    <description>The start date of this session.</description>
    <inlineHelpText>Date this session begins.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>