force-app/main/default/objects/HAM_Event_Session__c/fields/HAM_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>HAM_Start_Time__c</fullName>
    <description>The start time of this session.</description>
    <inlineHelpText>Time this session begins.</inlineHelpText>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>