force-app/main/default/objects/HAM_Event_Session__c/fields/HAM_Type__c.field-meta.xml
<CustomField>
    <fullName>HAM_Type__c</fullName>
    <description>Delivery format of this session carried over from Blackthorn.</description>
    <inlineHelpText>Whether this session is in person or virtual.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>